[gd_scene load_steps=14 format=3 uid="uid://de588x5faof28"]

[ext_resource type="Script" path="res://scripts/blender.gd" id="1_c1qjh"]
[ext_resource type="Texture2D" uid="uid://b4h80blw48dh4" path="res://assets/saw_enemy.png" id="2_ivgqb"]
[ext_resource type="PackedScene" uid="uid://p7rtwtkyoxl6" path="res://components/hitbox.tscn" id="3_6mqth"]
[ext_resource type="PackedScene" uid="uid://daytajnd160e8" path="res://components/health_component.tscn" id="4_3gobp"]
[ext_resource type="PackedScene" uid="uid://dcd72ihkctsg4" path="res://components/hurtbox.tscn" id="5_wc0sl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p155y"]
size = Vector2(10, 44)

[sub_resource type="CircleShape2D" id="CircleShape2D_tpsdr"]
radius = 157.277

[sub_resource type="CircleShape2D" id="CircleShape2D_obfo8"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_xyj4c"]
resource_name = "floatLeft"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7o6xu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_x3nw2"]
resource_name = "floatRight"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1431k"]
_data = {
"RESET": SubResource("Animation_7o6xu"),
"floatLeft": SubResource("Animation_xyj4c"),
"floatRight": SubResource("Animation_x3nw2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1l5o"]
size = Vector2(14, 43)

[node name="blender" type="CharacterBody2D"]
script = ExtResource("1_c1qjh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_ivgqb")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, -22)
shape = SubResource("RectangleShape2D_p155y")

[node name="playerDection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDection"]
shape = SubResource("CircleShape2D_tpsdr")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource("3_6mqth")]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-6, -25)
shape = SubResource("CircleShape2D_obfo8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1431k")
}

[node name="HealthComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_3gobp")]
player = NodePath("..")
MAX_HEALTH = 8.0

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_wc0sl")]
collision_layer = 32
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(5, -22.5)
shape = SubResource("RectangleShape2D_h1l5o")

[node name="damageTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
